Add TypedCodec to support inline code in codecs